mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_main_returns_value.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Function 'main' must return void, not 'int'
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_main_returns_value.mux:2:21
   |
 2 | func main() returns int {
   |                     ^^^
   |
= help: The entry point 'main' function must be declared as 'returns void'. Change the return type to void.
